--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -104,12 +104,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 49,
+"breakpoints": PackedInt32Array(70),
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 24.0,
+"row": 78,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
