--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 69,
-"folded_lines": Array[int]([39, 176, 185, 188, 225, 233]),
+"column": 0,
+"folded_lines": Array[int]([39, 182, 194, 239]),
 "h_scroll_position": 0,
-"row": 166,
-"scroll_position": 153.0,
-"selection": false,
+"row": 51,
+"scroll_position": 54.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 51,
+"selection_to_column": 33,
+"selection_to_line": 51,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,11 +35,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 113,
-"scroll_position": 50.0,
+"row": 129,
+"scroll_position": 122.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,7 +49,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
+"row": 14,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,16 +77,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 87,
 "scroll_position": 83.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 87,
-"selection_to_column": 33,
-"selection_to_line": 87,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -91,7 +91,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 85,
@@ -99,7 +99,7 @@ state={
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 85,
-"selection_to_column": 24,
+"selection_to_column": 18,
 "selection_to_line": 85,
 "syntax_highlighter": "GDScript"
 }
@@ -128,6 +128,20 @@ state={
 "h_scroll_position": 0,
 "row": 15,
 "scroll_position": 15.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/ElementalStateMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(29, 46),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 8.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
