--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-28
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=212
+dock_hsplit_2=170
 dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -22,6 +22,16 @@ open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidad
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
-open_help=["CharacterBody2D", "PhysicsShapeQueryParameters2D", "RayCast2D"]
+open_help=["CharacterBody2D", "Node2D", "PhysicsShapeQueryParameters2D", "RayCast2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
