--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Objetos/ElementalState.tscn", "res://Entidades/Explosion.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Explosion.tscn", "res://Entidades/Piedra.tscn"]
 
 [ScriptEditor]
 
