--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -17,11 +17,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Puerta.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Puerta.tscn", "res://Entidades/Palanca.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Palanca.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
 open_help=["CharacterBody2D", "PhysicsShapeQueryParameters2D", "RayCast2D"]
 script_split_offset=150
 list_split_offset=0
