--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_split_2=24
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=185
-dock_hsplit_3=-232
+dock_hsplit_3=-236
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -17,11 +17,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/blonk.tscn", "res://Objetos/ElementalState.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Chooty.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Piedra.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
+open_scripts=["res://Scripts/Barril_b.gd", "res://Scripts/Blonk.gd", "res://Scripts/Chooty.gd", "res://Scripts/Cuki.gd", "res://Scripts/ElementalStateMachine.gd", "res://Scripts/Explosion.gd", "res://Scripts/ExplosiveEater.gd", "res://Scripts/Piedra.gd", "res://Scripts/Puerta.gd", "res://Scripts/Rabion.gd", "res://Scripts/Salud.gd"]
 open_help=["AnimationPlayer", "CharacterBody2D", "CollisionObject2D", "CollisionObject3D", "CPUParticles2D", "Node2D", "Object", "PhysicsShapeQueryParameters2D", "RayCast2D", "SceneTreeTimer", "Sprite2D", "Vector2"]
 script_split_offset=150
 list_split_offset=0
