--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([39, 182, 194, 241]),
+"column": 33,
+"folded_lines": Array[int]([39, 182, 194]),
 "h_scroll_position": 0,
-"row": 234,
-"scroll_position": 214.0,
+"row": 240,
+"scroll_position": 223.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 122,
-"scroll_position": 115.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 122,
-"selection_to_column": 25,
-"selection_to_line": 122,
+"row": 27,
+"scroll_position": 21.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -49,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 24.0,
+"row": 35,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -79,9 +75,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 104,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 146,
+"h_scroll_position": 0,
 "row": 25,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,16 +87,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
-"folded_lines": Array[int]([69, 81, 89, 92, 108, 113, 120, 141, 144]),
+"column": 30,
+"folded_lines": Array[int]([69, 89, 141]),
 "h_scroll_position": 0,
-"row": 149,
-"scroll_position": 103.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 149,
-"selection_to_column": 32,
-"selection_to_line": 149,
+"row": 84,
+"scroll_position": 65.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -113,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 150,
-"scroll_position": 134.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,5 +139,19 @@ state={
 "selection_from_line": 15,
 "selection_to_column": 56,
 "selection_to_line": 15,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Puerta.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
