--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([39, 240]),
 "h_scroll_position": 0,
 "row": 46,
-"scroll_position": 15.0,
+"scroll_position": 116.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 51,
-"scroll_position": 62.0,
+"scroll_position": 112.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,12 +45,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": false,
+"row": 41,
+"scroll_position": 23.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 41,
+"selection_to_column": 34,
+"selection_to_line": 41,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 87,
-"scroll_position": 83.0,
+"scroll_position": 64.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,11 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 120,
-"scroll_position": 108.0,
+"row": 99,
+"scroll_position": 95.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +123,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 78,
-"scroll_position": 12.0,
+"row": 44,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,7 +141,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 75,
-"scroll_position": 0.0,
+"scroll_position": 41.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
