--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 18,
 "folded_lines": Array[int]([39, 240]),
 "h_scroll_position": 0,
-"row": 148,
-"scroll_position": 233.0,
+"row": 246,
+"scroll_position": 229.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -114,11 +114,11 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 9,
+"breakpoints": PackedInt32Array(117),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 115,
+"row": 111,
 "scroll_position": 93.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
