--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([39, 182, 194, 241]),
+"column": 22,
+"folded_lines": Array[int]([47, 55, 82, 93, 99, 148, 183, 191, 195, 200, 203, 255, 263]),
 "h_scroll_position": 0,
-"row": 234,
-"scroll_position": 214.0,
+"row": 45,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,11 +49,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 24.0,
+"row": 10,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,10 +63,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 57,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -79,9 +79,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 104,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 146,
+"h_scroll_position": 158,
 "row": 25,
-"scroll_position": 18.0,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,16 +91,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
-"folded_lines": Array[int]([69, 81, 89, 92, 108, 113, 120, 141, 144]),
+"column": 43,
+"folded_lines": Array[int]([92, 108, 120, 144]),
 "h_scroll_position": 0,
-"row": 149,
+"row": 144,
 "scroll_position": 103.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 149,
-"selection_to_column": 32,
-"selection_to_line": 149,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -109,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 125,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 150,
-"scroll_position": 134.0,
+"h_scroll_position": 46,
+"row": 126,
+"scroll_position": 118.5,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 15.0,
+"row": 16,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -137,15 +133,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 0.0,
+"row": 13,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 51,
-"selection_from_line": 15,
-"selection_to_column": 56,
-"selection_to_line": 15,
+"selection_from_column": 54,
+"selection_from_line": 13,
+"selection_to_column": 59,
+"selection_to_line": 13,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Palanca.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Piedra_a_z.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
