--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([47, 55, 82, 93, 99, 148, 183, 191, 195, 200, 203, 255, 263]),
 "h_scroll_position": 0,
-"row": 45,
-"scroll_position": 30.0,
+"row": 35,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 0.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 125,
+"column": 31,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 46,
-"row": 126,
-"scroll_position": 118.5,
+"h_scroll_position": 0,
+"row": 156,
+"scroll_position": 152.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,12 +119,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 61,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 10.0,
-"selection": false,
+"row": 36,
+"scroll_position": 11.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 36,
+"selection_to_column": 61,
+"selection_to_line": 36,
 "syntax_highlighter": "GDScript"
 }
 
@@ -137,7 +141,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 54,
 "selection_from_line": 13,
@@ -165,10 +169,38 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Burbuja_tar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 47,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Dardo_veneno.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
