--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([82, 93, 99, 148, 191, 195, 200, 203, 258, 266]),
 "h_scroll_position": 0,
 "row": 56,
-"scroll_position": 51.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 128,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 119,
-"scroll_position": 101.0,
-"selection": false,
+"row": 118,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 118,
+"selection_to_column": 128,
+"selection_to_line": 118,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 18.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([]),
+"column": 36,
+"folded_lines": Array[int]([28, 34, 39, 82, 95, 109, 117, 138, 146, 154, 160, 163, 176, 180, 184, 187]),
 "h_scroll_position": 0,
-"row": 174,
-"scroll_position": 179.0,
+"row": 209,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -197,7 +201,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
